--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,4 +3,12 @@
 
 <p><%=homeStartingContent %></p>
 
-<%- include('partials/footer') -%>
+<% posts.forEach(elem => { %>
+<div>
+  <h1><%= elem.title %></h1>
+  <p>
+    <%= elem.content.substring(1, 100) + "..." %>
+    <a href="/posts/<%=elem.title %>">Read more</a>
+  </p>
+</div>
+<%}) %> <%- include('partials/footer') -%>
